Stop scrollbar appearing by limiting body height

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,7 +2,7 @@
 
 html,
 body {
-  height: 100%;
+  height: 98%;
   background-color: #eaeeff;
 }
 
